--- a/index.html
+++ b/index.html
@@ -115,7 +115,25 @@
 
 
     </main>
-    <footer></footer>
+    <footer>
+
+
+        <p>&COPY; Zohaib Khan Front-End Web Devolper & Desighner  </p>
+    <label for="Portfolio">Connect On</label>
+    
+        <a href="https://www.linkedin.com/in/zohaib-khan">
+          <img src="linkdin.png" alt="Connect On linkdin">
+        </a>
+        <label for="Portfolio">Send Mail</label>
+    
+        <a href="mailto:zohaibkhaneduawkum@gmail.com">
+          <img src="Gmail.png" alt="Send Mail">
+        </a>
+        <label for="Portfolio">Portfolio</label>
+        <a href="https://khan-1291.github.io/zohaibKhan/">
+          <img src="port.png" alt="Portfolio">
+        </a>
+    </footer>
     <script src="vidio.js"></script>
 
 </body>
